# lex-au

./: .coverage  .gitignore  README.md  acts.txt  hf-readme.md  pyproject.toml
corpus/reports/: doc-conversion-candidates.txt  doc-conversion-currency-verification.md  doc-conversion-go-no-go.md  doc-conversion-relevance-skim.md  doc-conversion-sample.json  doc-conversion-spike-results.json  doc-conversion-spotcheck.md  legacy-residual-135-names.txt  legacy-residual-135-notes.md  legacy-residual-final-triage.md  legacy-residual-post-phase1a-names.txt  legacy-shape-discovery-notes.md  legacy-shape-discovery.json  phase2-3-closing-summary.md  phase2b-residual-triage.md
docs/: akn-conformance.md  au-legislative-conventions.md
docs/superpowers/plans/: 2026-07-01-lex-au-v0.6.0.md  (+3 more)
scripts/: decide_doc_conversion_gate.py  discover_legacy_shapes.py  generate_relevance_skim.py  select_doc_conversion_sample.py  spike_doc_conversion.py  spot_check.py  verify_list_definitions.py
src/lexau/: builder.py  cli.py  corpus.py  crawler.py  datelinks.py  doc_convert.py  docx_reader.py  endnote_parser.py  frbr.py  models.py  parser.py  quantlinks.py  reflinks.py  site.py  termlinks.py  validator.py
templates/: act.html.j2  index.html.j2
tests/: conftest.py  test_builder.py  test_corpus.py  test_crawler.py  test_datelinks.py  test_doc_convert.py  test_docx_reader.py  test_endnote_parser.py  test_export.py  test_frbr.py  test_models.py  test_parser.py  test_quantlinks.py  test_reflinks.py  test_site.py  test_spot_check_cli.py  test_termlinks.py  test_validator.py
(+1 files in other folders)
