[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "lexau"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "python-docx>=1.1",
    "lxml>=5.3",
    "cobalt>=6.0",
    "click>=8.1",
    "jinja2>=3.1",
    "huggingface-hub>=0.23",
]

[project.scripts]
lexau = "lexau.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]
