[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "lexau"
version = "0.7.0"
description = "Commonwealth Acts as AKN 3.0 XML — crawler, converter, static site, and Hugging Face export"
authors = [{name = "Ching Chew", email = "ching.chew@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"

[project.urls]
Repository = "https://github.com/cchew/lex-au"
Dataset = "https://huggingface.co/datasets/cchew/lex-au"
dependencies = [
    "requests>=2.32",
    "python-docx>=1.1",
    "lxml>=5.3",
    "cobalt>=6.0",
    "click>=8.1",
    "jinja2>=3.1",
    "huggingface-hub>=0.23",
]

[project.scripts]
lexau = "lexau.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]
